--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-light mx-5 my-3 border p-0 bg-light">
-        <a href="" class="navbar-brand bg-info py-3 px-5 text-white d-none d-md-block">HAMSORE </a>
+        <a href="" class="navbar-brand bg-info py-sm-3 px-sm-5 px-2 text-white d-none d-md-block">HAMSORE </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#mynav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,7 +71,7 @@
 
     <section class="parallax d-flex align-items-center">
         <div class="container text-center">
-            <h1 class="pt-5 text-white display-4"><b>Your New Online Presence with Hamsore<b></h1>
+            <h1 class="pt-5 text-white display-md-3"><b>Your New Online Presence with Hamsore<b></h1>
             <p class="text-white mb-5">WE ARE TEAM OF TALENTED DESIGNERS MAKING WEBSITES WITH BOOTSTRAP</p>
             <button class="btn btn-outline-light px-5 ">GET STARTED</button>
         </div>
@@ -92,7 +92,7 @@
     <div class="container mt-5 ">
         <div class="row">
             <div class="col-md-6 animate-1">
-            <h1 class="display-4 text-dark " style="font-weight: bold;">HERE ARE THINGS WE CAN DO</h1>
+            <h1 class="display-md-4 text-dark " style="font-weight: bold;">HERE ARE THINGS WE CAN DO</h1>
             <p class="lead" style="font-weight: bold;">Buy that demands a second look and get found online with marketing tools that put your business in all the right places.
                                    </p>
              </div>
