--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-light mx-5 my-3 border p-0 bg-light">
-        <a href="" class="navbar-brand bg-info py-sm-3 px-sm-5 px-2 text-white d-none d-md-block">HAMSORE </a>
+        <a href="" class="navbar-brand bg-info py-sm-3 px-sm-5 px-2 text-white">HAMSORE </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#mynav">
             <span class="navbar-toggler-icon"></span>
         </button>
